--- a/index.html
+++ b/index.html
@@ -1,19 +1,267 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Bangladesh</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
+
+<body class="fira-sans-regular">
     <header>
-        
+        <nav class="header">
+            <div class="b_nav">Bangladesh 2.0</div>
+            <div>
+                <button class="btn">Sign In</button>
+            </div>
+        </nav>
+        <div class="banner">
+            <div class="banner-description">
+                <p class="banner-title">Bangladesh 2.0</p>
+                <h2 class="banner-about">Idea , innovation ,
+                    vision and challenges in New Bangladesh.</h2>
+                <div>
+                    <button class="btn btn-explore">Explore New Bangladesh</button>
+                </div>
+            </div>
+            <div class="banner-img">
+                <img src="./assets/hero.png" alt="">
+            </div>
+        </div>
     </header>
     <main>
+        <section id="pillars">
+            <div class="pillars-heading">
+                <h2 class="pillars-title">Pillars of "Bangladesh 2.0"</h2>
+                <div class="parent-of-boxes">
+                    <div class="pillars-box">
+                        <div><img src="assets/card-icon.png" height="64px" width="64px" alt=""></div>
+                        <h3 class="innovation">Innovation</h3>
+                        <p class="innovation-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+                            sequi quos </p>
+                    </div>
+                    <div class="pillars-box">
+                        <div><img src="assets/card-icon.png" height="64px" width="64px" alt=""></div>
+                        <h3 class="innovation">Sustainability</h3>
+                        <p class="innovation-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+                            sequi quos </p>
+                    </div>
+                    <div class="pillars-box">
+                        <div><img src="assets/card-icon.png" height="64px" width="64px" alt=""></div>
+                        <h3 class="innovation">Infrastructure</h3>
+                        <p class="innovation-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+                            sequi quos </p>
+                    </div>
+                    <div class="pillars-box">
+                        <div><img src="assets/card-icon.png" height="64px" width="64px" alt=""></div>
+                        <h3 class="innovation">Empowerment</h3>
+                        <p class="innovation-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+                            sequi quos </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="pillars">
+            <div class="pillars-heading vision-heading">
+                <h2 class="pillars-title vision-title">The Vision of Future</h2>
+                <p class="vision-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                    cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives
+                    in renewable energy, digital transformation, and robust infrastructure, the country is set to become
+                    a global model of development.</p>
+                <div class="vision-cards">
+                    <div class="vision-card">
+                        <div><img src="assets/card-icon.png" height="64px" width="64px" alt=""></div>
+                        <h3 class="innovation">Digital Transformation</h3>
+                        <p class="innovation-description">Creating a nationwide digital ecosystem to enhance
+                            connectivity and access to services for all citizens.</p>
+                        <div>
+                            <button class="vision-btn">Learn More</button>
+                        </div>
+                    </div>
+                    <div style="background-color: #C6E4D6;" class="vision-card">
+                        <div><img src="assets/card-icon.png" height="64px" width="64px" alt=""></div>
+                        <h3 class="innovation">Green Energy</h3>
+                        <p class="innovation-description">Investments in solar and wind energy to ensure a sustainable
+                            and eco-friendly future.</p>
+                        <div>
+                            <button style="background-color: #09A15C;" class="vision-btn">Learn More</button>
+                        </div>
+                    </div>
+                    <div style="background-color: #F7EBCF;" class="vision-card">
+                        <div><img src="assets/card-icon.png" height="64px" width="64px" alt=""></div>
+                        <h3 class="innovation">Modern Infrastructure</h3>
+                        <p class="innovation-description">Building state-of-the-art infrastructure to support economic
+                            growth and global competitiveness.</p>
+                        <div>
+                            <button style="background-color: #FFC239;" class="vision-btn">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="yunus">
+            <div>
+                <p class="yunus-description">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas,
+                    ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis
+                    exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores
+                    ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est
+                    vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos
+                    excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                <h4 class="name">Dr. Muhammad Yunus</h4>
+                <p class="yunus-description">Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>
+        </section>
+        <section id="opinion">
+            <h2 class="pillars-title vision-title">Your Opinion Matters</h2>
+            <div class="question">
+                <div class="head-question">
+                    <h5 class="header-question">Questions</h5>
+                    <h5 class="header-question">Select Your Opinion</h5>
+                </div>
+                <div class="head-question-1">
+                    <h5 class="header-question-1">Do you believe Bangladesh is on the right path toward becoming a
+                        developed nation?</h5>
+                    <div class="header-question-1-select">
+                        <select class="select-head" name="cars" id="cars">
+                            <option value="volvo">Volvo</option>
+                            <option value="saab">Saab</option>
+                            <option value="mercedes">Mercedes</option>
+                            <option value="audi">Audi</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="head-question-1">
+                    <h5 class="header-question-1">Do you believe Bangladesh is on the right path toward becoming a
+                        developed nation?</h5>
+                    <div class="header-question-1-select">
+                        <select class="select-head" name="cars" id="cars">
+                            <option value="volvo">Volvo</option>
+                            <option value="saab">Saab</option>
+                            <option value="mercedes">Mercedes</option>
+                            <option value="audi">Audi</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="head-question-1">
+                    <h5 class="header-question-1">Do you believe Bangladesh is on the right path toward becoming a
+                        developed nation?</h5>
+                    <div class="header-question-1-select">
+                        <select class="select-head" name="cars" id="cars">
+                            <option value="volvo">Volvo</option>
+                            <option value="saab">Saab</option>
+                            <option value="mercedes">Mercedes</option>
+                            <option value="audi">Audi</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="recent">
+            <h2 class="pillars-title vision-title">Recent News</h2>
+            <p class="news-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure, the country is set to become a
+                global model of development.</p>
+            <div class="new-card">
+                <div>
+                    <img class="image-news" src="/assets/satelite.png" alt="">
+                </div>
+                <div class="news-headline">
+                    <h3 class="launches">Bangladesh Launches New Satellite</h3>
+                    <div>
+                        <img src="/assets/al-jazeera.png" height="40px" width="150px" alt="">
+                    </div>
+                    <p class="date">Date: 05/01/2025 Time: 10.25 PM</p>
+                    <p class="news-heading">Not until the creation and maintenance of decent conditions of life for all
+                        people are recognized and accepted as a common obligation of all people and all countries—not
+                        until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <div>
+                        <button class="btn news-btn">Read More</button>
+                    </div>
+                </div>
+            </div>
+            <div style="flex-direction: row-reverse;" class="new-card">
+                <div>
+                    <img class="image-news" src="/assets/satelite.png" alt="">
+                </div>
+                <div class="news-headline">
+                    <h3 class="launches">Bangladesh Launches New Satellite</h3>
+                    <div>
+                        <img src="/assets/al-jazeera.png" height="40px" width="150px" alt="">
+                    </div>
+                    <p class="date">Date: 05/01/2025 Time: 10.25 PM</p>
+                    <p class="news-heading">Not until the creation and maintenance of decent conditions of life for all
+                        people are recognized and accepted as a common obligation of all people and all countries—not
+                        until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <div>
+                        <button class="btn news-btn">Read More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="new-card">
+                <div>
+                    <img class="image-news" src="/assets/satelite.png" alt="">
+                </div>
+                <div class="news-headline">
+                    <h3 class="launches">Bangladesh Launches New Satellite</h3>
+                    <div>
+                        <img src="/assets/al-jazeera.png" height="40px" width="150px" alt="">
+                    </div>
+                    <p class="date">Date: 05/01/2025 Time: 10.25 PM</p>
+                    <p class="news-heading">Not until the creation and maintenance of decent conditions of life for all
+                        people are recognized and accepted as a common obligation of all people and all countries—not
+                        until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <div>
+                        <button class="btn news-btn">Read More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="donation">
+            <h1 class="pillars-title vision-title donate-head">Donate Today</h1>
+            <p class="donation-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="donate-taka">
+                <div class="taka">100 Taka</div>
+                <div style="background-color: #C6E4D6;" class="taka">200 Taka</div>
+                <div class="taka">500 Taka</div>
+                <div class="taka">1000 Taka</div>
 
+            </div>
+            <div class="text-box-container">
+                <textarea class="text-box" name="" id="" placeholder="Other amount(taka)"></textarea>
+            </div>
+            <div class="btn-donate">
+                <button class="btn news-btn">Donate Now</button>
+            </div>
+        </section>
     </main>
     <footer>
+        <section class="subscribe">
+            <h1>Subscribe Newsletter</h1>
+            <p style="padding: 0 60px; opacity: 0.8;">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+            <div class="subscribe-input">
+                <textarea class="email" placeholder="Enter your email here" name="" id=""></textarea>
+                <button class="btn-subs news-btn">Subscribe</button>
+            </div>
+            <p style="margin: 50px 0; color: #0E0E0E;">We promise not to spam you!</p>
+        </section>
+        <section>
+            <h1 style="text-align: center; margin-bottom: 20px; ">Bangladesh 2.0</h1>
+            <hr style="opacity: 0.6;">
+            <div class="social-icon">
+                <img src="./assets/facebook.png" alt="">
+                <img src="./assets/instagram.png" alt="">
+                <img src="./assets/x.png" alt="">
+            </div>
 
+        </section>
     </footer>
 </body>
+
 </html>
