solve-image-load-problem

--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
                 global model of development.</p>
             <div class="new-card">
                 <div>
-                    <img class="image-news" src="/assets/satelite.png" alt="">
+                    <img class="image-news" src="./assets/satelite.png" alt="">
                 </div>
                 <div class="news-headline">
                     <h3 class="launches">Bangladesh Launches New Satellite</h3>
                     <div>
-                        <img src="/assets/al-jazeera.png" height="40px" width="150px" alt="">
+                        <img src="./assets/al-jazeera.png" height="40px" width="150px" alt="">
                     </div>
                     <p class="date">Date: 05/01/2025 Time: 10.25 PM</p>
                     <p class="news-heading">Not until the creation and maintenance of decent conditions of life for all
@@ -184,12 +184,12 @@
             </div>
             <div style="flex-direction: row-reverse;" class="new-card">
                 <div>
-                    <img class="image-news" src="/assets/satelite.png" alt="">
+                    <img class="image-news" src="./assets/satelite.png" alt="">
                 </div>
                 <div class="news-headline">
                     <h3 class="launches">Bangladesh Launches New Satellite</h3>
                     <div>
-                        <img src="/assets/al-jazeera.png" height="40px" width="150px" alt="">
+                        <img src="./assets/al-jazeera.png" height="40px" width="150px" alt="">
                     </div>
                     <p class="date">Date: 05/01/2025 Time: 10.25 PM</p>
                     <p class="news-heading">Not until the creation and maintenance of decent conditions of life for all
